# mc-dump-to-map

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  example-compound  example-compound-packet  example-compound-packet.json
map/: level.dat_old
map/advancements/: 54119674-db87-417a-8514-add1a885b222.json
map/poi/: r.0.0.mca
map/region/: r.-1.-1.mca  r.-1.0.mca  r.-1.1.mca  r.0.-1.mca  r.0.0.mca  r.0.1.mca
map/stats/: 54119674-db87-417a-8514-add1a885b222.json
src/: main.rs  models.rs  utils.rs
