[package]
name = "dump-to-map"
version = "0.1.0"
authors = ["MooreDev <asya.corbeau@get-moore.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hematite-nbt = "0.4.1"
serde_json = "1.0"
anvil-region = { path = "./lib/anvil-region" }
clap = "2.33.0"
serde = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
byteorder = "1.3.4"
named-binary-tag = "*"
mc-varint = "0.1.1"
bit-array = "0.4.4"
typenum = "1.3"
lazy_static = "1.4" 
tungstenite = "0.10.1"
actix = "0.10.0-alpha.3"
actix-rt = "1.1.1"